# desktop-automator

./: .gitignore  README.md  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
scripts/: install_win.bat
src/desktopautomator/: __init__.py  __main__.py  config.py  const.py  exceptions.py  setup.py
src/desktopautomator/data/initial_config/: __init__.py  configuration.yaml
