[metadata]
name = desktopautomator
author = Vadim Titov
author_email = titov.hse@gmail.com
description = A desktop app that allows to create custom shortcuts and automations on your desktop
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vadimtitov/desktop-automator
project_urls =
    Bug Tracker = https://github.com/vadimtitov/desktop-automator/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache-2.0 License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha

[options]
package_dir=
    =src
packages = find:
python_requires = >=3.8
install_requires =
   PyAutoGUI >= 0.9.53, <1
   hassapi >= 0.1.1, <1 

[options.packages.find]
where=src

[options.package_data]
desktopautomator.data = */*.yaml, */*.json, */*.mp3

[options.extras_require]
test = pytest

[options.entry_points]
console_scripts =
    dauto=desktopautomator.__main__:main

[coverage:run]
branch = true
parallel = true

[coverage:report]
skip_covered = true
show_missing = true
sort = Cover
